# xray-client

./: .gitignore  README.md  pyproject.toml  ra.py
src/auto_updater/: __init__.py  main.py
src/cli/: cli.py  interactive.py  main.py  shell.py
src/cli/commands/: __init__.py  connection.py  server_management.py  settings.py  subscribe_management.py
src/core/: binary_manager.py  config.py  config_generator.py  process_manager.py  subscription.py
src/parsers/: base.py  vless.py  vmess.py
src/services/: base.py  mixins.py  xray_service.py
src/tui/: main.py
src/utils/: helpers.py  latency.py  logging.py
systemd/: xray-client-autoupdate.service  xray-client-connect.service
