[project]
name = "xray-client"
version = "0.1.0"
description = "Python CLI client for XRAY/VLESS VPN with subscription support"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "httpx>=0.28.1",
    "click>=8.1.8",
    "psutil>=6.1.1",
    "pydantic>=2.10.6",
    "click-shell>=2.1",
    "loguru>=0.7.3",
    "textual>=8.0.0",
]

[project.scripts]
xray = "src.cli.main:main"
xray-tui = "src.tui.main:main"
xray-autoupdater = "src.auto_updater.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[dependency-groups]
dev = [
    "black>=25.12.0",
    "isort>=7.0.0",
]
